Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/crpe.h

/*************************************/
// unchanged constant
/*************************************/
#define PE_UNCHANGED       -1
short CRPE_API PEGetVersion (short versionRequested);
// open and close subreport
short CRPE_API PEOpenSubreport (short parentJob,
                                const char FAR *subreportName);
BOOL CRPE_API PECloseSubreport (short printJob);
typedef struct PEJobInfo
{
    WORD StructSize;    // initialize to PE_SIZEOF_JOB_INFO

    DWORD NumRecordsRead,
          NumRecordsSelected,
          NumRecordsPrinted;
    WORD  DisplayPageN, // the page being displayed in window
          LatestPageN,  // the page being generated
          StartPageN;   // user opted, default to 1
    BOOL  printEnded;   // full report print completed?
}PEJobInfo;
#define PE_SIZEOF_JOB_INFO (sizeof (PEJobInfo))
short CRPE_API PEGetJobStatus (short printJob,
                               PEJobInfo FAR *jobInfo);
// A macro to create section codes:
// (This representation allows up to 25 groups and 40 sections of a given
// type, although Crystal Reports itself has no such limitations.)
#define PE_SECTION_CODE(sectionType,groupN,sectionN) \
    (((sectionType) * 1000) + ((groupN) % 25) + (((sectionN) % 40) * 25))
// A macro to create area codes:
#define PE_AREA_CODE(sectionType,groupN) \
    PE_SECTION_CODE (sectionType, groupN, 0)
// Macros to decode section and area codes:
#define PE_SECTION_TYPE(sectionCode) ((sectionCode) / 1000)
#define PE_GROUP_N(sectionCode)      ((sectionCode) % 25)
#define PE_SECTION_N(sectionCode)    (((sectionCode) / 25) % 40)
                                        // in PESetGraphOptionInfo.
// bar sizes
#define PE_GBS_MINIMUMBARSIZE       0
#define PE_GBS_SMALLBARSIZE         1
#define PE_GBS_AVERAGEBARSIZE       2
#define PE_GBS_LARGEBARSIZE         3
#define PE_GBS_MAXIMUMBARSIZE       4
// pie sizes
#define PE_GPS_MINIMUMPIESIZE       64
#define PE_GPS_SMALLPIESIZE         48
#define PE_GPS_AVERAGEPIESIZE       32
#define PE_GPS_LARGEPIESIZE         16
#define PE_GPS_MAXIMUMPIESIZE       0
// detached pie slice
#define PE_GDPS_NODETACHMENT        0
#define PE_GDPS_SMALLESTSLICE       1
#define PE_GDPS_LARGESTSLICE        2
// marker sizes
#define PE_GMS_SMALLMARKERS         0
#define PE_GMS_MEDIUMSMALLMARKERS   1
#define PE_GMS_MEDIUMMARKERS        2
#define PE_GMS_MEDIUMLARGEMARKERS   3
#define PE_GMS_LARGEMARKERS         4
// marker shapes
#define PE_GMSP_RECTANGLESHAPE      1
#define PE_GMSP_CIRCLESHAPE         4
#define PE_GMSP_DIAMONDSHAPE        5
#define PE_GMSP_TRIANGLESHAPE       8
// chart color
#define PE_GCR_COLORCHART           0
#define PE_GCR_BLACKANDWHITECHART   1
// chart data points
#define PE_GDP_NONE                 0
#define PE_GDP_SHOWLABEL            1
#define PE_GDP_SHOWVALUE            2
// number formats
#define PE_GNF_NODECIMAL            0
#define PE_GNF_ONEDECIMAL           1
#define PE_GNF_TWODECIMAL           2
#define PE_GNF_CURRENCYNODECIMAL    3
#define PE_GNF_CURRENCYTWODECIMAL   4
#define PE_GNF_PERCENTNODECIMAL     5
#define PE_GNF_PERCENTONEDECIMAL    6
#define PE_GNF_PERCENTTWODECIMAL    7
// viewing angles
#define PE_GVA_STANDARDVIEW         1
#define PE_GVA_TALLVIEW             2
#define PE_GVA_TOPVIEW              3
#define PE_GVA_DISTORTEDVIEW        4
#define PE_GVA_SHORTVIEW            5
#define PE_GVA_GROUPEYEVIEW         6
#define PE_GVA_GROUPEMPHASISVIEW    7
#define PE_GVA_FEWSERIESVIEW        8
#define PE_GVA_FEWGROUPSVIEW        9
#define PE_GVA_DISTORTEDSTDVIEW     10
#define PE_GVA_THICKGROUPSVIEW      11
#define PE_GVA_SHORTERVIEW          12
#define PE_GVA_THICKSERIESVIEW      13
#define PE_GVA_THICKSTDVIEW         14
#define PE_GVA_BIRDSEYEVIEW         15
#define PE_GVA_MAXVIEW              16
typedef struct PEGraphOptionInfo
{
    WORD StructSize;

    short graphColour; // PE_GCR_*, PE_UNCHANGED for no change
	
    short showLegend; //BOOL, PE_UNCHANGED for no change
    short legendPosition; //PE_GLP_*, if showLegend == 0, means no legend 

// pie charts and doughut charts
    short pieSize; // PE_GPS_*, PE_UNCHANGED for no change
    short detachedPieSlice; // PE_GDPS_*, PE_UNCHANGED for no change

// bar chart
    short barSize; // PE_GBS_*, PE_UNCHANGED for no change
    short verticalBars; //BOOL, PE_UNCHANGED for no change

// markers (used for line and bar charts)
    short markerSize; // PE_GMS_*, PE_UNCHANGED for no change
    short markerShape; // PE_GMSP_*, PE_UNCHANGED for no change

//data points
    short dataPoints; // PE_GDP_*, PE_UNCHANGED for no change    
    short dataValueNumberFormat; //PE_GNF_*, PE_UNCHANGED for no change
	
// 3d
    short viewingAngle; //PE_GVA_*, PE_UNCHANGED for no change

    short legendLayout;     //PE_GLL_*
} PEGraphOptionInfo;
#define PE_SIZEOF_GRAPH_OPTION_INFO (sizeof (PEGraphOptionInfo))
BOOL CRPE_API PEGetGraphOptionInfo(short printJob, 
                                   short sectionN, 
                                   short graphN, 
                                   PEGraphOptionInfo FAR * graphOptionInfo);
BOOL CRPE_API PESetGraphOptionInfo(short printJob, 
                                   short sectionN, 
                                   short graphN,
                                   PEGraphOptionInfo FAR * graphOptionInfo);
//graph axes
#define PE_GGT_NOGRIDLINES              0
#define PE_GGT_MINORGRIDLINES           1
#define PE_GGT_MAJORGRIDLINES           2
#define PE_GGT_MAJORANDMINORGRIDLINES   3
//axis division method
#define PE_ADM_AUTOMATIC                0
#define PE_ADM_MANUAL                   1
typedef struct PEGraphAxisInfo
{
    WORD StructSize;

    short groupAxisGridLine; // PE_GGT_*, PE_UNCHANGED for no change
    short dataAxisYGridLine; // PE_GGT_*, PE_UNCHANGED for no change
    short dataAxisY2GridLine; // PE_GGT_*, PE_UNCHANGED for no change
    short seriesAxisGridline; // PE_GGT_*, PE_UNCHANGED for no change

    double dataAxisYMinValue;
    double dataAxisYMaxValue;
    double dataAxisY2MinValue;
    double dataAxisY2MaxValue;
    double seriesAxisMinValue;
    double seriesAxisMaxValue;

    short dataAxisYNumberFormat; //PE_GNF_*, PE_UNCHANGED for no change
    short dataAxisY2NumberFormat; //PE_GNF_*, PE_UNCHANGED for no change
    short seriesAxisNumberFormat; //PE_GNF_*, PE_UNCHANGED for no change

    short dataAxisYAutoRange; // BOOL, PE_UNCHANGED for no change
    short dataAxisY2AutoRange; //BOOL, PE_UNCHANGED for no change
    short seriesAxisAutoRange; //BOOL, PE_UNCHANGED for no change

    short dataAxisYAutomaticDivision; // PE_ADM_* or PE_UNCHANGED for no change
    short dataAxisY2AutomaticDivision; // PE_ADM_* or PE_UNCHANED for no change
    short seriesAxisAutomaticDivision; // PE_ADM_* or PE_UNCHANED for no change

    long dataAxisYManualDivision;  //if dataAxisYAutomaticDivision is PE_ADM_AUTOMATIC, this field is ignored
    long dataAxisY2ManualDivision; //if dataAxisY2AutomaticDivision is PE_ADM_AUTOMATIC, this field is ignored
    long seriesAxisManualDivision; //if seriesAxisAutomaticDivision is PE_ADM_AUTOMATIC, this field is ignored

    short dataAxisYAutoScale;       //BOOL, PE_UNCHANGED for no change
    short dataAxisY2AutoScale;      //BOOL, PE_UNCHANGED for no change
    short seriesAxisAutoScale;      //BOOL, PE_UNCHANGED for no change
}  PEGraphAxisInfo;
#define PE_SIZEOF_GRAPH_AXIS_INFO (sizeof (PEGraphAxisInfo))
BOOL CRPE_API PEGetGraphAxisInfo(short printJob, 
                                 short sectionN, 
                                 short graphN, 
                                 PEGraphAxisInfo FAR * graphAxisInfo);
BOOL CRPE_API PESetGraphAxisInfo(short printJob, 
                                 short sectionN, 
                                 short graphN, 
                                 PEGraphAxisInfo FAR * graphAxisInfo);
/********************************************************************************/
// NOTE : Stored Procedures
//
// The previous Stored Procedure API Calls PEGetNParams, PEGetNthParam,
// PEGetNthParamInfo and PESetNthParam have been made obsolete.  Older 
// applications that used these API Calls will still work as before, but for new 
// development please use the new Parameter API calls below, 
//
// The Stored Procedure Parameters have now been unified with the Parameter 
// Fields.
//
// The replacements for these calls are as follows : 
//		PEGetNParams		= PEGetNParameterFields
//		PEGetNthParam		= PEGetNthParameterField
//		PEGetNthParamInfo	= PEGetParameterValueInfo
//		PESetNthParam		= PESetNthParameterField
//
// NOTE : To tell if a Parameter Field is a Stored Procedure, use the 
//		  PEGetNthParameterType or PEGetNthParameterField API Calls
//
// If you wish to SET a parameter to NULL then set the CurrentValue to CRWNULL.
// The CRWNULL is of Type String and is independant of the datatype of the 
// parameter.
//
/********************************************************************************/

/****************************************/
// Parameter field operation
/****************************************/
#define PE_WORD_LEN           2
// The function PEGetNthTableType allows the application to determine the
// type of each table.  The application can test DBType (equal to
// PE_DT_STANDARD or PE_DT_SQL), or test the database DLL name used to
// create the report.  DLL names have the following naming convention:
//     - PDB*.DLL for standard (non-SQL) databases,
//     - PDS*.DLL for SQL databases.
//
// In the case of ODBC (PDSODBC.DLL) the DescriptiveName includes the
// ODBC data source name.

#define PE_WORD_LEN          2
                                 BOOL ( CALLBACK * callbackProc )(short eventID, void *param, void *userData),
#else
                                 BOOL ( CALLBACK __export * callbackProc )(short eventID, void *param, void *userData),
#endif
//Formula Syntax

#define PE_FS_SIZE      2
#define PE_FST_CRYSTAL   0
#define PE_FST_BASIC     1
typedef struct PEFormulaSyntax
{
    WORD StructSize;
    short formulaSyntax [PE_FS_SIZE];           // PE_FST_* or PE_UNCHANGED.
} PEFormulaSyntax;
#define PE_SIZEOF_FORMULA_SYNTAX (sizeof (PEFormulaSyntax))
// PESetFormulaSyntax
// Use this API to set the syntax to use in the next (and all successive)
// formula API call(s).
// Set one of PE_FST_* into formulaSyntax[0];
// formulaSyntax[1] is reserved for internal use.
// ***Default Behaviour: If any Formula API is called before calling
//                       PESetFormulaSyntax then PE_FST_CRYSTAL is assumed.
/////////////////////////////////////////////////////////////////////////
BOOL CRPE_API PESetFormulaSyntax (short printJob, PEFormulaSyntax FAR *formulaSyntax);
// PEGetFormulaSyntax
// Indicates the syntax used by the formula addressed in the last formula API call.
// The syntax type is returned in formulaSyntax[0];
// formulaSyntax[1] is reserved for internal use.
// ***Default Behaviour: If this API is called before any Formula API is called
//                       then the values returned will be PE_UNCHANGED.
///////////////////////////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////////////////////////
BOOL CRPE_API PEGetFormulaSyntax (short printJob, PEFormulaSyntax FAR *formulaSyntax);