Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/global32.bas


' bar sizes
Global Const PE_GBS_MINIMUMBARSIZE = 0
Global Const PE_GBS_SMALLBARSIZE = 1
Global Const PE_GBS_AVERAGEBARSIZE = 2
Global Const PE_GBS_LARGEBARSIZE = 3
Global Const PE_GBS_MAXIMUMBARSIZE = 4

' mmm, pie sizes
Global Const PE_GPS_MINIMUMPIESIZE = 64
Global Const PE_GPS_SMALLPIESIZE = 48
Global Const PE_GPS_AVERAGEPIESIZE = 32
Global Const PE_GPS_LARGEPIESIZE = 16
Global Const PE_GPS_MAXIMUMPIESIZE = 0

' detached pie slice
Global Const PE_GDPS_NODETACHMENT = 0
Global Const PE_GDPS_SMALLESTSLICE = 1
Global Const PE_GDPS_LARGESTSLICE = 2

' marker sizes
Global Const PE_GMS_SMALLMARKERS = 0
Global Const PE_GMS_MEDIUMSMALLMARKERS = 1
Global Const PE_GMS_MEDIUMMARKERS = 2
Global Const PE_GMS_MEDIUMLARGEMARKERS = 3
Global Const PE_GMS_LARGEMARKERS = 4

' marker shapes
Global Const PE_GMSP_RECTANGLESHAPE = 1
Global Const PE_GMSP_CIRCLESHAPE = 4
Global Const PE_GMSP_DIAMONDSHAPE = 5
Global Const PE_GMSP_TRIANGLESHAPE = 8

' chart color
Global Const PE_GCR_COLORCHART = 0
Global Const PE_GCR_BLACKANDWHITECHART = 1

' chart data points
Global Const PE_GDP_NONE = 0
Global Const PE_GDP_SHOWLABEL = 1
Global Const PE_GDP_SHOWVALUE = 2

' number formats
Global Const PE_GNF_NODECIMAL = 0
Global Const PE_GNF_ONEDECIMAL = 1
Global Const PE_GNF_TWODECIMAL = 2
Global Const PE_GNF_CURRENCYNODECIMAL = 3
Global Const PE_GNF_CURRENCYTWODECIMAL = 4
Global Const PE_GNF_PERCENTNODECIMAL = 5
Global Const PE_GNF_PERCENTONEDECIMAL = 6
Global Const PE_GNF_PERCENTTWODECIMAL = 7

' viewing angles
Global Const PE_GVA_STANDARDVIEW = 1
Global Const PE_GVA_TALLVIEW = 2
Global Const PE_GVA_TOPVIEW = 3
Global Const PE_GVA_DISTORTEDVIEW = 4
Global Const PE_GVA_SHORTVIEW = 5
Global Const PE_GVA_GROUPEYEVIEW = 6
Global Const PE_GVA_GROUPEMPHASISVIEW = 7
Global Const PE_GVA_FEWSERIESVIEW = 8
Global Const PE_GVA_FEWGROUPSVIEW = 9
Global Const PE_GVA_DISTORTEDSTDVIEW = 10
Global Const PE_GVA_THICKGROUPSVIEW = 11
Global Const PE_GVA_SHORTERVIEW = 12
Global Const PE_GVA_THICKSERIESVIEW = 13
Global Const PE_GVA_THICKSTDVIEW = 14
Global Const PE_GVA_BIRDSEYEVIEW = 15
Global Const PE_GVA_MAXVIEW = 16

Type PEGraphOptionInfo
    StructSize As Integer

    graphColour As Integer      ' PE_GCR_*, PE_UNCHANGED for no change
        
    ShowLegend As Integer       ' BOOL, PE_UNCHANGED for no change
    legendPosition As Integer   ' PE_GLP_*, if showLegend == 0, means no legend

' pie charts and doughut charts
    pieSize As Integer  ' PE_GPS_*, PE_UNCHANGED for no change
    detachedPieSlice As Integer ' PE_GDPS_* or PE_UNCHANGED for no change

' bar chart
    barSize As Integer  ' PE_GBS_*, PE_UNCHANGED for no change
    VerticalBars As Integer     ' BOOL, PE_UNCHANGED for no change

' markers (used for line and bar charts)
    markerSize As Integer       ' PE_GMS_*, PE_UNCHANGED for no change
    markerShape As Integer      ' PE_GMSP_*, PE_UNCHANGED for no change

' data points
    dataPoints  As Integer      ' PE_GDP_*, PE_UNCHANGED for no change
    dataValueNumberFormat As Integer    ' PE_GNF_*, PE_UNCHANGED for no change
' 3d
    viewingAngle As Integer     ' PE_GVA_*, PE_UNCHANGED for no change

    legendLayout As Integer     ' PE_GLL_*
End Type

Global Const PE_SIZEOF_GRAPH_OPTION_INFO = (14 * PE_WORD_LEN)


Declare Function PEGetGraphOptionInfo Lib "crpe32.dll" (ByVal printJob As Integer, ByVal sectionN As Integer, ByVal GraphN As Integer, graphOptionInfo As PEGraphOptionInfo) As Integer
Declare Function PESetGraphOptionInfo Lib "crpe32.dll" (ByVal printJob As Integer, ByVal sectionN As Integer, ByVal GraphN As Integer, graphOptionInfo As PEGraphOptionInfo) As Integer

' graph axes
Global Const PE_GGT_NOGRIDLINES = 0
Global Const PE_GGT_MINORGRIDLINES = 1
Global Const PE_GGT_MAJORGRIDLINES = 2
Global Const PE_GGT_MAJORANDMINORGRIDLINES = 3

' axis division method
Global Const PE_ADM_AUTOMATIC = 0
Global Const PE_ADM_MANUAL = 1

Type PEGraphAxisInfo
    StructSize As Integer

    groupAxisGridLine As Integer        ' PE_GGT_*, PE_UNCHANGED for no change
    dataAxisYGridLine As Integer        ' PE_GGT_*, PE_UNCHANGED for no change
    dataAxisY2GridLine As Integer       ' PE_GGT_*, PE_UNCHANGED for no change
    seriesAxisGridline As Integer       ' PE_GGT_*, PE_UNCHANGED for no change

    dataAxisYMinValue As Double
    dataAxisYMaxValue As Double
    dataAxisY2MinValue As Double
    dataAxisY2MaxValue As Double
    seriesAxisMinValue As Double
    seriesAxisMaxValue As Double

    dataAxisYNumberFormat As Integer    ' PE_GNF_*, PE_UNCHANGED for no change
    dataAxisY2NumberFormat As Integer   ' PE_GNF_*, PE_UNCHANGED for no change
    seriesAxisNumberFormat As Integer   ' PE_GNF_*, PE_UNCHANGED for no change

    dataAxisYAutoRange As Integer       ' BOOL, PE_UNCHANGED for no change
    dataAxisY2AutoRange As Integer      ' BOOL, PE_UNCHANGED for no change
    seriesAxisAutoRange As Integer      ' BOOL, PE_UNCHANGED for no change

    dataAxisYAutomaticDivision As Integer       ' PE_ADM_* or PE_UNCHANGED for no change
    dataAxisY2AutomaticDivision As Integer      ' PE_ADM_* or PE_UNCHANGED for no change
    seriesAxisAutomaticDivision As Integer      ' PE_ADM_* or PE_UNCHANGED for no change

    dataAxisYManualDivision As Long     ' if dataAxisYAutomaticDivision is PE_ADM_AUTOMATIC, this field is ignored
    dataAxisY2ManualDivision As Long    ' if dataAxisY2AutomaticDivision is PE_ADM_AUTOMATIC, this field is ignored
    seriesAxisManualDivision As Long    ' if seriesAxisAutomaticDivision is PE_ADM_AUTOMATIC, this field is ignored

    dataAxisYAutoScale As Integer       ' BOOL, PE_UNCHANGED for no change
    dataAxisY2AutoScale As Integer      ' BOOL, PE_UNCHANGED for no change
    seriesAxisAutoScale As Integer      ' BOOL, PE_UNCHANGED for no change
End Type

Global Const PE_SIZEOF_GRAPH_AXIS_INFO = (5 * PE_WORD_LEN) + (6 * PE_DOUBLE_LEN) + (9 * PE_WORD_LEN) + (3 * PE_LONG_LEN) + (3 * PE_WORD_LEN)


Declare Function PEGetGraphAxisInfo Lib "crpe32.dll" (ByVal printJob As Integer, ByVal sectionN As Integer, ByVal GraphN As Integer, graphAxisInfo As PEGraphAxisInfo) As Integer
Declare Function PESetGraphAxisInfo Lib "crpe32.dll" (ByVal printJob As Integer, ByVal sectionN As Integer, ByVal GraphN As Integer, graphAxisInfo As PEGraphAxisInfo) As Integer

' Subreport(s)
Declare Function PEOpenSubreport Lib "crpe32.dll" (ByVal parentJob%, ByVal subreportName$) As Integer
Declare Function PECloseSubreport Lib "crpe32.dll" (ByVal printJob%) As Integer

' Formula Syntax

Global Const PE_FS_SIZE = 2

' Syntax Types
Global Const PE_FST_CRYSTAL = 0
Global Const PE_FST_BASIC = 1

Type PEFormulaSyntax
    StructSize As Integer               ' Set to PE_SIZEOF_FORMULA_SYNTAX
    FormulaSyntax(0 To 1) As Integer    ' PE_FS_* or PE_UNCHANGED.
End Type

Global Const PE_SIZEOF_FORMULA_SYNTAX = (3 * PE_WORD_LEN)

' PESetFormulaSyntax
' Use this API to set the syntax to use in the next (and all successive)
' formula API call(s).
' Set one of PE_FST_* into formulaSyntax[0];
' formulaSyntax[1] is reserved for internal use.
' ***Default Behaviour: If any Formula API is called before calling
'                      PESetFormulaSyntax then PE_FST_CRYSTAL is assumed.
Declare Function PESetFormulaSyntax Lib "crpe32.dll" (ByVal printJob As Integer, FormulaSyntax As PEFormulaSyntax) As Integer

' PEGetFormulaSyntax
' Indicates the syntax used by the formula addressed in the last formula API call.
' The syntax type is returned in formulaSyntax[0];
' formulaSyntax[1] is reserved for internal use.
' ***Default Behaviour: If this API is called before any Formula API is called
'                       then the values returned will be PE_UNCHANGED.
Declare Function PEGetFormulaSyntax Lib "crpe32.dll" (ByVal printJob As Integer, FormulaSyntax As PEFormulaSyntax) As Integer


Function PE_SECTION_CODE(sectionType%, groupN%, sectionN%) As Integer
' A function to create section codes:
' (This representation allows up to 25 groups and 40 sections of a given
' type, although Crystal Reports itself has no such limitations.)
    PE_SECTION_CODE = (((sectionType) * 1000) + ((groupN) Mod 25) + (((sectionN) Mod 40) * 25))
End Function

Function PE_AREA_CODE(sectionType%, groupN%) As Integer
'A function to create area codes:
    PE_AREA_CODE = PE_SECTION_CODE(sectionType, groupN, 0)
End Function

Function PE_GROUP_N(sectionCode%) As Integer
' Function to decode Group Number from section codes:
    PE_GROUP_N = ((sectionCode) Mod 25)
End Function

Function PE_SECTION_N(sectionCode) As Integer
' Function to decode Section Number from section codes:
   PE_SECTION_N = (((sectionCode \ 25) Mod 40))
End Function

Function PE_SECTION_TYPE(sectionCode%) As Integer
' Function to decode type from section codes:
    PE_SECTION_TYPE = ((sectionCode) \ 1000)
End Function

'Function to simplify PEGetVersion
Function PEVBGetVersion(ByVal component%) As Single
    Dim version As Integer
    Dim major As Integer
    Dim minor As Integer
    version = PEGetVersion(component)
    If version = 0 Then
        PEVBGetVersion = 0
    Else
        major = version / 256
        minor = version Mod 256
        PEVBGetVersion = major + (minor / 10)
    End If
End Function


Function PEGetJobStatus(ByVal job As Integer, Info As PEJobInfo) As Integer
' To work around the problem of 4 - Byte alignment the PEGetJobStatus
' call has been re-declared here. When your application calls PEGetJobStatus
' it is calling this function which in turn calls CRPE32.DLL.
Dim splitinfo As SplitPEJobInfo
Dim temp1 As Long
Dim temp2 As Long

splitinfo.StructSize = PE_SIZEOF_JOB_INFO
PEGetJobStatus = RealPEGetJobStatus(job, splitinfo)
If PEGetJobStatus <> -1 Then
    temp1 = splitinfo.NumRecordsRead1
    If temp1 < 0 Then
        temp1 = 65536 + temp1
    End If
    temp2 = splitinfo.NumRecordsRead2
    If temp2 < 0 Then
        temp2 = 65536 + temp2
    End If
    temp2 = temp2 * 65536
    Info.NumRecordsRead = temp1 + temp2
    
    temp1 = splitinfo.NumRecordsSelected1
    If temp1 < 0 Then
        temp1 = 65536 + temp1
    End If
    temp2 = splitinfo.NumRecordsSelected2
    If temp2 < 0 Then
        temp2 = 65536 + temp2
    End If
    temp2 = temp2 * 65536
    Info.NumRecordsSelected = temp1 + temp2
    
    temp1 = splitinfo.NumRecordsPrinted1
    If temp1 < 0 Then
        temp1 = 65536 + temp1
    End If
    temp2 = splitinfo.NumRecordsPrinted2
    If temp2 < 0 Then
        temp2 = 65536 + temp2
    End If
    Info.NumRecordsPrinted = temp1 + temp2
    Info.LatestPageN = splitinfo.LatestPageN
    Info.StartPageN = splitinfo.StartPageN
    Info.DisplayPageN = splitinfo.DisplayPageN
    Info.PrintEnded = splitinfo.PrintEnded
End If
End Function

' End Of Declarations
